<resources>
    <string name="app_name">College Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_menu">Add</string>
    <string name="map_menu">Map</string>
    <string name="college_name">College Name</string>
    <string name="title_activity_map">Map</string>
    <string name="home_menu">Home</string>
    <string name="set">Set</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="overview">OVERVIEW:</string>
    <string name="size_undergrad">Size (Undergrad):</string>
    <string name="admission_rate">Admission Rate:</string>
    <string name="completion_rate">Completion Rate:</string>
    <string name="retention_rate">Retention Rate:</string>
    <string name="in_state_tuition">In-State Tuition:</string>
    <string name="out_of_state_tuition">Out-of-State Tuition:</string>
    <string name="median_debt">Median Debt:</string>
    <string name="address">Address</string>

    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>
