<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.setup.finalproject.ListItemActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/item_size"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/overview_textsize"
        android:layout_gravity="center"
        />

    <!-- Overview-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/overview_textsize"
        android:text="@string/overview"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/overview_below_margin">

        <TextView
            android:id="@+id/size"
            style="@style/overview_textviews"
            android:layout_marginEnd="@dimen/overview_margin"
            android:text="@string/size_undergrad"
            />

        <TextView
            android:id="@+id/admission"
            style="@style/overview_textviews"
            android:text="@string/admission_rate"
            android:layout_marginEnd="@dimen/overview_margin"
            android:layout_below="@+id/size"
            />

        <TextView
            android:id="@+id/completion"
            style="@style/overview_textviews"
            android:text="@string/completion_rate"
            android:layout_marginEnd="@dimen/overview_margin"
            android:layout_below="@id/admission"
            />

        <TextView
            android:id="@+id/retention"
            style="@style/overview_textviews"
            android:text="@string/retention_rate"
            android:layout_marginEnd="@dimen/overview_margin"
            android:layout_below="@id/completion"
            />

        <TextView
            android:id="@+id/in"
            style="@style/overview_textviews"
            android:text="@string/in_state_tuition"
            android:layout_toEndOf="@+id/size"
            />

        <TextView
            android:id="@+id/out"
            style="@style/overview_textviews"
            android:text="@string/out_of_state_tuition"
            android:layout_toEndOf="@id/admission"
            android:layout_below="@+id/in"
            />

        <TextView
            android:id="@+id/debt"
            style="@style/overview_textviews"
            android:text="@string/median_debt"
            android:layout_below="@id/out"
            android:layout_toEndOf="@id/completion"
            />

    </RelativeLayout>

    <!-- WebView -->
    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">
    </WebView>


</LinearLayout>
